--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,6 +1,5 @@
-once_title: PHP ausführen
+once_title = PHP ausführen
 
-# Konfigurationsformulare
 once_config = Einstellungen
 once_input_label = Code-Eingabe
 
